--- a/CollectionViewExplore/CollectionViewCell.xib
+++ b/CollectionViewExplore/CollectionViewCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,7 +16,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="436" height="316"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="kQ0-Dp-hA5" secondAttribute="trailing" id="FcK-RN-BrX"/>
                 <constraint firstAttribute="bottom" secondItem="kQ0-Dp-hA5" secondAttribute="bottom" id="frJ-om-vcl"/>
@@ -33,9 +32,4 @@
             <point key="canvasLocation" x="85.507246376811594" y="-128.57142857142856"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
